[project]
name = "mpot-ex1"
version = "1.0.0"
description = "Code for MPOT, exercise sheet 1"
readme = "README.md"
authors = [
    { name = "Jonathan Junior Agyekum", email = "e12537832@student.tuwien.ac.at" }
    { name = "Cosette Ioana Lupu", email = "e12511257@student.tuwien.ac.at" }
    { name = "Viktor Samuel Podhradsky", email = "e12515276@student.tuwien.ac.at" }
]
requires-python = ">=3.14"
dependencies = [
    "gurobipy==13.0.1",
    "networkx>=2.8.8",
    "tsplib95>=0.7.1",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
